feat: Add spinning functionality to the wheel of fortune game

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="wheel-container">
         <canvas id="wheelCanvas" width="500" height="500"></canvas>
+        <div id="arrow"></div>
         <button id="spinButton">Lancer</button>
+        <div id="result"></div>
     </div>
     <script src="script.js"></script>
 </body>
